Fix input text is wrong position

--- a/packages/components/Input/Input.Rgb.module.css
+++ b/packages/components/Input/Input.Rgb.module.css
@@ -6,4 +6,6 @@
   text-align: center;
   position: relative;
   top: -1px;
+  font-size: var(--cgp-base-font-size, 14px);
+  line-height: 18px;
 }
